[package]
name = "rsbpm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rsbpm"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tiny-skia = "0.12.0"
anyhow = "1"
